--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,16 @@
-bitcoin.price
-ibm*
-*.old
+# Python files
+*.pyc
+.cache/
+
+# Folder view configuration files
+.DS_Store
+Desktop.ini
+_build
+
+# Thumbnail cache files
+._*
+Thumbs.db
+
+# Files that might appear on external disks
+.Spotlight-V100
+.Trashes
